[tool.poetry]
name = "binance-trade-bot"
version = "0.1.0"
description = "Binance Trading Bot"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
requests = "^2.27.1"
python-dotenv = "^0.19.2"
alpaca-trade-api = "^1.5.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
invoke = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
